quizzler/src/app/modules/views/menu/menu.component.scss
@import '../../../../styles/colors.scss';
@import '../../../../styles/styles.scss';

div.wrapper{
  width: 100%;
  height: 75%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  div.menu{
    border-radius: 0.5em;
    width: 50em;
    height: 30em;
    margin-top: 3%;
    margin-left: auto;
    margin-right: auto;
  
    &.light, &.none{
      background-color: $white;
      outline: solid $black 0.5em;
    }
  
    &.dark{
      background-color: $midnite;
      outline: solid $shale 0.3em;
    }
  
    div.upper{
      height: 5em;
      width: 100%;
      margin: none;
  
      &.light, &.none{
        background-color: $blue;
        border-bottom: solid $black 0.5em;
      }
  
      &.dark{
        background-color: $bluesmoke;
        border-bottom: solid $shale 0.3em;
      }
  
      h2{
        font-family: "Bungee";
        font-size: 3.75em;
        text-align: center;
        -webkit-text-stroke: $black 3px;
  
        &.light, &.none{
          color: $yellow;
        }
  
        &.dark{
          color: $silver;
        }
      }
    }
  
    div.middle{
      height: 30em;
      display: flex;
      flex-direction: row;
  
      &.light, &.none{
        background-color: $white;
      }
  
      &.dark{
        background-color: $midnite;
      }
  
      div#labels{
        width: 50%;
        display: flex;
        flex-direction: column;
  
        div.label{
          height: 25%;
          padding: 1em;
  
          h3{
            font-family: "Bungee";
            font-size: 3em;
            margin-top: .1em;
    
            &.light, &.none{
              color: $yellow;
              -webkit-text-stroke: $black 2px;
            }
    
            &.dark{
              color: $silver;
              -webkit-text-stroke: $black 3px;
            }
          }
        }
      }
  
      div#options{
        width: 50%;
        display: flex;
        flex-direction: column;
  
        div.option{
          display: inline-flex;
          flex-direction: row;
          height: 25%;
          padding: 1em;
    
          input[type=range]{
            width: 100%;
            margin-bottom: 1em;
  
            &.light, &.none{
              background-color: $white;
              
              &::-moz-range-thumb{
                background: $yellow;
                width: 2em;
                height: 2em;
                border-radius: 1em;
                outline: solid $black 0.3em;
              }
    
              &::-moz-range-track{
                background: $red;
                height: 1.25em;
                border-radius: 0.5em;
                outline: solid $black 0.3em;
              }
            }
  
            &.dark{
              background-color: $midnite;
              
              &::-moz-range-thumb{
                background: $silver;
                width: 2em;
                height: 2em;
                border-radius: 1em;
                outline: solid $periwinkle 0.1em;
  
                &:hover{
                  background: $periwinkle;
                  cursor: pointer;
                }
              }
    
              &::-moz-range-track{
                background: $bluesmoke;
                height: 1.25em;
                border-radius: 0.5em;
                outline: solid $shale 0.2em;
              }
            }
          }
  
          select{
            width: 100%;
            height: 75%;
            font-family: "BungeeHairline";
            font-size: 1.7em;
            text-align: center;
            border-radius: 0.5em;
            border: none;
            -moz-appearance: none;
            -webkit-appearance: none;
            background-position-x: calc(100% - 1em);
  
            &.light, &.none{
              outline: solid $black 0.1em;
              background-color: $white;
              color: $black;
              -webkit-text-stroke: $black 2px;
  
              &:hover{
                -webkit-text-stroke: $black 4px;
                cursor: pointer;
              }
            }
  
            &.dark{
              outline: solid $shale 0.1em;
              background-color: $bluesmoke;
              color: $silver;
              -webkit-text-stroke: $silver 2px;
  
              &:hover{
                -webkit-text-stroke: $silver 4px;
                cursor: pointer;
              }
            }
  
            option{
              font-family: "BungeeHairline";
            }
          }
        }
      }
    }
  
    div.lower{
      height: 5em;
      display: flexbox;
      flex-direction: row;
  
      &.light, &.none{
        border-top: solid $black 0.5em;
      }
  
      &.dark{
        border-top: solid $shale 0.3em;
      }
  
      button{
        width: 50%;
        height: 2em;
        border: none;
        font-family: "BungeeHairline";
        font-size: 2.3em;
  
        &.light, &.none{
          color: $black;
          -webkit-text-stroke: $black 2px;
  
          &#clear{
            background-color: $red;
          }
  
          &#begin{
            background-color: $green;
          }
  
          &:hover{
            -webkit-text-stroke: $black 4px;
          }
        }
  
        &.dark{
          color: $silver;
          -webkit-text-stroke: $silver 2px;
          background-color: $bluesmoke;
  
          &:hover{
            -webkit-text-stroke: $silver 4px;
          }
        }
      }
    }
  }
}

